--- a/package.json
+++ b/package.json
@@ -2,5 +2,13 @@
   "name": "multisig-wallet",
   "version": "1.0.0",
   "author": "Maikel Ordaz",
-  "license": "MIT"
+  "license": "MIT",
+  "devDependencies": {
+    "hardhat": "^2.10.1",
+    "prettier": "^2.7.1",
+    "prettier-plugin-solidity": "^1.0.0-dev.23"
+  },
+  "scripts": {
+    "compile": "yarn hardhat compile"
+  }
 }
