--- a/package.json
+++ b/package.json
@@ -4,9 +4,19 @@
   "author": "Maikel Ordaz",
   "license": "MIT",
   "devDependencies": {
+    "@nomiclabs/hardhat-ethers": "npm:hardhat-deploy-ethers",
+    "@nomiclabs/hardhat-etherscan": "^3.1.0",
+    "@nomiclabs/hardhat-waffle": "^2.0.3",
+    "chai": "^4.3.6",
+    "dotenv": "^16.0.1",
+    "ethereum-waffle": "^3.4.4",
+    "ethers": "^5.6.9",
     "hardhat": "^2.10.1",
+    "hardhat-deploy": "^0.11.12",
+    "hardhat-gas-reporter": "^1.0.8",
     "prettier": "^2.7.1",
-    "prettier-plugin-solidity": "^1.0.0-dev.23"
+    "prettier-plugin-solidity": "^1.0.0-dev.23",
+    "solidity-coverage": "^0.7.21"
   },
   "scripts": {
     "compile": "yarn hardhat compile"
