hardhat config settings

--- a/.env.example
+++ b/.env.example
@@ -1,4 +1,7 @@
 PRIVATE_KEY=234523425asdfasdfa
+ALICE_PRIVATE_KEY=
+BOB_PRIVATE_KEY=
+CHARLIE_PRIVATE_KEY=
 RINKEBY_RPC_URL=http://0.0.0.0:8545
 COINMARKETCAP_API_KEY=asdfasdfasdfasdfasdfasdfasdf
 ETHERSCAN_API_KEY=asdfasdfasdfs
